--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ input {
   transition: 0.3s;
 }
 
+.tab button.active {
+  background-color: #264aff;
+  color: #f0f0f0;
+}
+
 .tabcontent {
   display: none;
   padding: 6px 12px;
@@ -40,7 +45,9 @@ input {
   border-top: none;
 }
 
-
+h3 {
+    margin-bottom: 0rem;
+}
 
 button:hover {
     background-color: #b8afc2;
@@ -48,4 +55,8 @@ button:hover {
 
 button img {
     filter: brightness(0) saturate(100%);
+}
+
+button.active img {
+    filter: invert(1) brightness(100) saturate(100%);
 }
