--- a/creator.css
+++ b/creator.css
@@ -64,7 +64,7 @@ h2 {
   display: none;
   align-self: flex-start;
   padding: 6px 12px;
-  border: 1px solid #ccc;
+  border: 1px solid #ddd;
   border-top: none;
   width: 400px;
   max-height: 400px;
