Made button work better on mobile

--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@
 
     position: relative;
     width: 30%;
-    max-width: 500px;
-    min-width: 320px;
+    max-width: 50vh;
+    min-width: 35vh;
     min-height: 15vh ;
     overflow: hidden;
     border: 2px solid #ddd;
