--- a/index.css
+++ b/index.css
@@ -1,13 +1,29 @@
+body {
+    margin: 0;
+    padding: 0;
+    
+    min-height: 100vh;
+    width: 100%;
+    
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center; 
+    
+    background-color: #f4f4f4;
+}
+
 .creatorButtonWrapper {
     display: block;
     text-decoration: none;
     color: inherit;
 
     position: relative;
-    width: 30%;
-    max-width: 50vh;
-    min-width: 35vh;
-    min-height: 15vh ;
+    width: 90%;
+    max-width: 500px;
+    min-height: 140px;
+
     overflow: hidden;
     border: 2px solid #ddd;
     background-color: #264aff;
@@ -39,21 +55,25 @@
 
 .creatorButtonWrapper img {
     position: absolute;
-    bottom: -100%;
-    width: 14vh;
-    transform: translateY(0%);
-    transition-timing-function: transform cubic-bezier(0.175, 0.9, 0.32, 1.2);
+    bottom: 0;
+
+    width: 40%;
+    min-width: 100px;
+    max-width: 120px;
+
+    transform: translateY(100%);
+    transition: transform 0.3 cubic-bezier(0.175, 0.9, 0.32, 1.2);
     
 }
 
 .firstIMG {
-    left: -5%;
+    left: 0%;
     z-index: 1;
     transition: transform 0.3s;
 }
 
 .lastIMG {
-    left: 25%;
+    left: 20%;
     z-index: 1;
     transition: transform 0.3s;
 }
@@ -67,9 +87,9 @@
 }
 
 .creatorButtonWrapper:hover .sideIMG {
-    transform: translateY(-100%);
+    transform: translateY(-0%);
 }
 
 .creatorButtonWrapper:hover .middleIMG {
-    transform: translateY(-105%) scale(1.1);;
+    transform: translateY(-5%) scale(1.1);;
 }
