--- a/creator.css
+++ b/creator.css
@@ -1,5 +1,10 @@
 body {
     font-family: 'Bai Jamjuree', sans-serif;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .creator {
