--- a/index.css
+++ b/index.css
@@ -40,6 +40,59 @@ body {
     background-color: #e226ff;
 }
 
+.greyButtonWrapper {
+    background-color: #888888;
+}
+
+.greyButtonWrapper:hover {
+    background-color: #ffffff;
+}
+
+.greyButtonWrapper:hover .creatorButtonText {
+    color: #888888;
+}
+
+.sideBySide {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    max-width: 500px;
+}
+
+.sideBySide a{
+    display: block;
+    text-decoration: none;
+    color: inherit;
+
+    position: relative;
+    width: 50%;
+    max-width: 500px;
+    min-width: 100px;
+    min-height: 140px;
+
+    overflow: hidden;
+    border: 2px solid #ddd;
+    border-radius: 12px;
+    transition: background-color 1s ease;
+    cursor: pointer;
+}
+
+.sideBySide a img {
+    position: absolute;
+    bottom: 0;
+
+    width: 60%;
+    min-width: 100px;
+    max-width: 120px;
+
+    transform: translateY(100%);
+    transition: transform 0.3 cubic-bezier(0.175, 0.9, 0.32, 1.2);
+}
+
+.sideBySide a:hover .sideIMG {
+    transform: translateY(-5%) scale(1.1);;
+}
+
 .creatorButtonWrapper:hover {
     background-color: #ffffff;
 }
