--- a/love.css
+++ b/love.css
@@ -8,7 +8,8 @@ body {
 }
 
 .content {
-    width: 90%;
+    width: 95%;
+    max-width: 500px;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -39,8 +40,8 @@ body {
 }
 
 .progressNum {
-    position: absolute;
-    right: 5%;
+    position:absolute;
+    margin-left: 2%;
     font-weight: bold;
     color: #ffffff;
 }
