--- a/creator.css
+++ b/creator.css
@@ -22,6 +22,12 @@ button {
     font-family: 'Bai Jamjuree', sans-serif;
     vertical-align: middle;
     cursor: pointer;
+    border-radius: 12px;
+}
+
+input {
+    border-radius: 12px;
+    border: 1px solid #ddd;
 }
 
 .sketch-container {
@@ -89,11 +95,23 @@ button:hover {
 }
 
 .partButton {
-    background-color: cadetblue;
+    background-color: rgb(125, 201, 203);
 }
 
 .partButton:hover {
-    background-color: darkcyan;
+    background-color: cadetblue;
+}
+
+.downloadButton {
+    width: 120px;
+}
+
+.friendCodeText {
+    width: 100%;
+    display:block;
+    overflow-wrap: break-word;
+    word-break: break-all;
+    white-space: pre-wrap;
 }
 
 button img {
